sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnsupportedVariable/testclient.prog
simstep2 48
getvariable 0xa1 0xff dummy
simstep2 49
